# file_encryptor

./: .gitignore  .gitignore copy  README.md  example_config.yml  poetry.toml  pyproject.toml  test.txt
src/: cli.py  crypto.py
